[tool.poetry]
name = "stepik-plugins-client"
version = "1.2.2"
description = "Stepik plugins SDK"
authors = ["Hyperskill Team"]
readme = "README.md"
packages = [
    {include = "stepik_plugins_client"},
    {include = "stepic_plugins"}
]

[tool.poetry.dependencies]
python = "^3.11"
oslo-messaging = "4.6.1"
pytz = ">=2023.3"
structlog = ">=23.1.0"
voluptuous = "^0.14.1"

[tool.poetry.group.dev.dependencies]
mypy = "^1.4.1"
ruff = "^0.2.2"
types-pytz = ">=2023.3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = [
    "ALL",
]
ignore = [
    "A001",
    "A003",
    "ANN001",
    "ANN002",
    "ANN003",
    "ANN101",
    "ANN102",
    "ANN201",
    "ANN202",
    "ANN204",
    "ANN206",
    "ANN401",
    "ARG001",
    "ARG002",
    "B023",
    "BLE001",
    "COM812",
    "CPY001",
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
    "D205",
    "DTZ001",
    "DTZ004",
    "DTZ006",
    "DTZ012",
    "E203",
    "E741",
    "EXE002",
    "F403",
    "FBT001",
    "FBT002",
    "FBT003",
    "FIX002",
    "INP001",
    "ISC001",
    "N802",
    "N806",
    "N818",
    "PIE804",
    "PLC1901",
    "PLR2004",
    "PLR6301",
    "PLW0603",
    "PLW2901",
    "PT011",
    "PT012",
    "PTH100",
    "PTH102",
    "PTH110",
    "PTH111",
    "PTH112",
    "PTH118",
    "PTH120",
    "PTH123",
    "RUF012",
    "S101",
    "S105",
    "S110",
    "S311",
    "S602",
    "S603",
    "S607",
    "SIM108",
    "SLF001",
    "TD002",
    "TD003",
    "TRY003",
    "TRY301",
]

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
line-length = 100
target-version = "py311"

[tool.ruff.mccabe]
max-complexity = 14

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.pep8-naming]
classmethod-decorators = [
    "classmethod",
    "django.utils.decorators.classonlymethod",
    "django.utils.functional.classproperty"
]

[tool.ruff.pylint]
max-args = 15
max-branches = 14
max-returns = 14
max-statements = 71

[tool.ruff.isort]
combine-as-imports = true
known-third-party = ["elasticsearch"]
order-by-type = false
required-imports = ["from __future__ import annotations"]

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
disallow_any_generics = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
explicit_package_bases = true
ignore_errors = false
ignore_missing_imports = true
implicit_reexport = true
strict_equality = true
strict_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true
